@@ -381,7 +381,8 @@ a.search_refine				{display:inline-block; vertical-align:middle; width:15%; bord
 a.search_refine:hover		{background:#E2E2E2; border:1px solid #000; text-shadow:none;}
 .search_query				{font-size:1.1em; line-height:1.3em; color:#000; padding:10px 30px 10px 0; width:300px; box-sizing:border-box;}
 .search_query span			{font-size:14px; display:block; padding-top:5px; color:#000; line-height:1.2em; text-transform:uppercase;}
-.search_query span img		{padding-right:7px; height:14px; width:14px;}
+.search_query span img		{padding:2px 7px 0 0; height:12px; width:12px;}
+.search_query span.filter_icon	{display:inline-block; padding:2px 5px 0 0; font-size:10px;}
 
 .search_opts				{display:inline-block; vertical-align:top; width:120px;}
 .search_opts_clear			{display:inline-block; vertical-align:top; width:154px;}
