@@ -367,9 +367,9 @@
 	</select>
 </div><div class="search_wrap">
 	<div class="search_label">
-		<span>&#10096;&#10097;</span> FLAGS AND TAGS
+		<span>&#10096;&#10097;</span> TAGS
 	</div>
-	<select aria-label="Select a flag or tag code from this dropdown" id="view_search_select_policy" class="chosen" multiple>
+	<select aria-label="Select a tag code from this dropdown" id="view_search_select_policy" class="chosen" multiple>
 		<option value></option>
 		{search_options_policy}
 	</select>
