@@ -5,6 +5,8 @@ Add new search filters
 Add code list links and description in table
 Fix closing div tag
 Add translations for participating-org
+Update search query display order
+Cleanup icon layout for search queries
 
 
 Development Portal (2019-11-9 shi)
